# hw75-tools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_info.h.in  hw_tools_zh_CN.ts  main.cpp  res.qrc
core/: config.cpp  config.hpp  config_templet.hpp  httpserver.cpp  httpserver.hpp
lib/HID/: devices.cpp  devices.hpp  error.cpp
lib/http/: SvrThread.cpp  SvrThread.hpp  httpsvr.cpp  httpsvr.hpp
lib/image/: Image.cpp  Image.hpp
lib/plugin/: Plugin.cpp  Plugin.hpp  PluginCalls.cpp
lib/protobuf/: hid_msg.proto  uart_comm.pb.cc  uart_comm.pb.h  uart_comm.proto  usb_comm.pb.cc  usb_comm.pb.h  usb_comm.proto
lib/utils/: Conv.cpp  Conv.hpp  Firmware.cpp  Firmware.hpp  HttpApis.cpp  HttpApis.hpp  Log.cpp  Log.hpp  coding.cpp  coding.hpp  config.cpp  config.hpp  defer.hpp  file.cpp  file.hpp  math.cpp  math.hpp  process.cpp  process.hpp  singleton.h
res/default/: logo.psd
script/: build_proto.bat  build_proto.sh
test/uf2conv/: CMakeLists.txt  main.cpp
tools/ImageConvert/: convert.cpp
ui/: ThreadRes.cpp  define.hpp  keyselection.cpp  keyselection.h  keyselection.ui  knobaligndialog.cpp  knobaligndialog.h  knobaligndialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mainwindow_ctrl.cpp  mainwindow_ctrl_charts.cpp  mainwindow_ctrl_eink.cpp  mainwindow_ctrl_home.cpp  mainwindow_ctrl_knob.cpp  mainwindow_ctrl_knob_charts.cpp  mainwindow_ctrl_oled.cpp  mainwindow_ctrl_plugin.cpp  mainwindow_ctrl_rgb.cpp  mainwindow_ctrl_setting.cpp  mainwindow_httpcall.cpp  mainwindow_menu.cpp  switchdialog.cpp  switchdialog.h  switchdialog.ui  vComboBox.h
ui/widget/: KnobDashboard.cpp  KnobDashboard.hpp  MsgBox.cpp  MsgBox.hpp  vComboBox.cpp
